# REST-API

./: .env  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  benchmark.yaml  check.sh  start.sh  start_local.sh  startup.sh  test.sh
.github/ISSUE_TEMPLATE/: bugs.yml  feature.yml  issue_template.yaml  security.yml
.github/workflows/: deploy.yaml  rust.yaml  rust.yml
migrations/2023-04-02-191414_initialize/: down.sql  up.sql
migrations/2023-04-26-164320_create_app/: down.sql  up.sql
src/: cors.rs  end_point.rs  error_handle.rs  main.rs  models.rs  response_handle.rs  routes.rs  schema.rs  tests.rs
test/: test.sh
