[package]
name = "rest-api"
version = "0.1.0"
authors = ["Isaac Hagedorn <isaachagedorn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = "4"
actix-rt = "1.1.0"
listenfd = "0.3"
dotenv = "0.11"
