[package]
name = "tool-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = {path="./metrics"}
# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }

# For connecting with the Postgres database
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }

r2d2 = "0.8.0"

# Lazy static initialization
lazy_static = "1.3.0"

# Rocket Webserver
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json", "diesel_postgres_pool"] }

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
